force-app/main/default/objects/Executive_Report__c/Executive_Report__c.object-meta.xml
<CustomObject>
    <label>Executive Report</label>
    <nameField>
        <displayFormat>{YYYY}/{MM}: {0000000}</displayFormat>
        <label>Executive Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>