force-app/main/default/objects/Executive_Report__c/fields/PDF_Attachment_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_Attachment_URL__c</fullName>
    <inlineHelpText>Stores generated PDF</inlineHelpText>
    <label>PDF Attachment URL</label>
    <type>Url</type>
</CustomField>